Add initial home controller plus an first idea for navigation and layout.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,13 @@
 </head>
 <body>
   <div class="container">
-    <%= yield %>
+    <header>
+      <%= render "shared/header" %>
+    </header>
+    <%= render "shared/navigation" %>
+    <div class="content">
+      <%= yield %>
+    </div>
   </div>
 </body>
 </html>
