--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -1,25 +1,25 @@
 $nav_border_color: #666;
 nav {
-	ul {
-		margin: 0;
-		width: 100%;
-		border: 1px solid $nav_border_color;
-		height: 30px;
-		li {
-			list-style-type: none;
-			float: left;
-			a {
-				border-right: 1px solid $nav_border_color;
-				display: block;
-				padding: 5px 15px;
-				&:hover {
-					text-decoration: none;
-					background: -webkit-gradient(linear, 0% 0%, 0% 100%, to(#2F2727), from(#000));
-					background: -webkit-linear-gradient(bottom, #2F2727, #000);
-					background: -moz-linear-gradient(bottom, #2F2727, #000);
-					background: -ms-linear-gradient(bottom, #2F2727, #000);
-					background: -o-linear-gradient(bottom, #2F2727, #000);
-					color: #08C;
+	.nav-wrapper {
+    border: 1px solid $nav_border_color;
+		background: -webkit-gradient(linear, 0% 0%, 0% 100%, to(#2F2727), from(#000));
+		background: -webkit-linear-gradient(bottom, #2F2727, #000);
+		background: -moz-linear-gradient(bottom, #2F2727, #000);
+		background: -ms-linear-gradient(bottom, #2F2727, #000);
+		background: -o-linear-gradient(bottom, #2F2727, #000);
+		ul {
+			margin: 0;
+			li {
+				list-style-type: none;
+				float: left;
+				a {
+					border-right: 1px solid $nav_border_color;
+					display: block;
+					padding: 8px 15px;
+					&:hover {
+						text-decoration: none;
+						color: #CCC;
+					}
 				}
 			}
 		}
