--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,9 +1,13 @@
 <nav>
-  <ul>
-    <li class="first"><%= link_to("Home", root_path)%></li>
-    <li><%= link_to("Images", "#") %></li>
-    <li><%= link_to("Show dates", "#") %></li>
-    <li><%= link_to("Contact", "#") %></li>
-    <li class="last"><%= link_to("Merchandise", "#") %></li>
-  </ul>
+  <div class="row">
+    <div class="span12 nav-wrapper">
+      <ul>
+        <li class="first"><%= link_to("Home", root_path)%></li>
+        <li><%= link_to("Images", "#") %></li>
+        <li><%= link_to("Show dates", "#") %></li>
+        <li><%= link_to("Contact", "#") %></li>
+        <li class="last"><%= link_to("Merchandise", "#") %></li>
+      </ul>
+    </div>
+  </div>
 </nav>
