--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -3,7 +3,7 @@
     <div class="span12 nav-wrapper">
       <ul>
         <li class="first"><%= link_to("Home", root_path)%></li>
-        <li><%= link_to("Images", "#") %></li>
+        <li><%= link_to("Images", images_path) %></li>
         <li><%= link_to("Show dates", "#") %></li>
         <li><%= link_to("Contact", "#") %></li>
         <li class="last"><%= link_to("Merchandise", "#") %></li>
