--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="span3 sidebar">
-    <div>
+    <div class="splash">
       <img src="http://placehold.it/200x200" class="img-rounded">
     </div>
     <div class="twitter">
