--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,13 +1,20 @@
-<nav>
-  <div class="row">
-    <div class="span12 nav-wrapper">
-      <ul>
-        <li class="first"><%= link_to("Home", root_path)%></li>
-        <li><%= link_to("Images", images_path) %></li>
-        <li><%= link_to("Show dates", "#") %></li>
-        <li><%= link_to("Contact", "#") %></li>
-        <li class="last"><%= link_to("Merchandise", "#") %></li>
-      </ul>
+<div class="navbar navbar-inverse">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <%= link_to("Slightly Left", root_url, class: 'brand') %>
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+          <li><%= link_to("Images", images_path) %></li>
+          <li><%= link_to("Show dates", "#") %></li>
+          <li><%= link_to("Contact", "#") %></li>
+          <li class="last"><%= link_to("Merchandise", "#") %></li>
+        </ul>
+      </div>
     </div>
   </div>
-</nav>
+</div>
